--- a/nacos-provide/pom.xml
+++ b/nacos-provide/pom.xml
@@ -17,8 +17,14 @@
     </properties>
 
     <dependencies>
+        <!--孵化器版本-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>-->
+<!--        </dependency>-->
+        <!--毕业版本的Nacos Discovery Starter-->
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
+            <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
     </dependencies>
