--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,10 @@
         <java.version>1.8</java.version>
         <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
-        <nacos.version>0.2.2.RELEASE</nacos.version>
+        <!--毕业版本的SpringCloudAlibaba依赖，对应SpringCloud的Finchley版本 官方推荐使用-->
+        <spring-cloud-alibaba.version>2.0.1.RELEASE</spring-cloud-alibaba.version>
+        <!-- 使用目前最新的nacos客户端 1.2.0-->
+        <nacos-client.version>1.2.0</nacos-client.version>
     </properties>
 
     <dependencies>
@@ -60,15 +63,15 @@
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>2.0.1.RELEASE</version>
+                <version>${spring-cloud-alibaba.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <!-- 使用目前最新的nacos客户端 1.2.0-->
+            <!-- 使用目前最新的nacos客户端-->
             <dependency>
                 <groupId>com.alibaba.nacos</groupId>
                 <artifactId>nacos-client</artifactId>
-                <version>1.2.0</version>
+                <version>${nacos-client.version}</version>
             </dependency>
 
             <!--孵化器版本的SpringCloudAlibaba依赖 官方不再推荐使用-->
